--- a/style.CSS
+++ b/style.CSS
@@ -40,6 +40,7 @@ html {
 html body {
   font-family: "Pretendard";
   overflow-x: hidden;
+  position: relative;
 }
 
 header,
@@ -53,6 +54,24 @@ img {
   display: block;
 }
 /* Customize --------------------------------------------------------------- */
+/* Swiper --------------------------------------------------------------- */
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 /* header --------------------------------------------------------------- */
 header {
   width: 100vw;
@@ -60,45 +79,24 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: rgba(255, 255, 255, 0.1);
+  z-index: 10;
+  backdrop-filter: blur(1rem);
+}
+
+header.invert-color {
+  color: #000;
 }
 
 header > .hd-container {
-  width: 100%;
+  width: 164rem;
   height: 9rem;
   display: flex;
-  justify-content: center;
-  gap: 9.6rem;
+  justify-content: space-between;
   align-items: center;
-  border: var(--box-border);
-}
-
-@media screen and (max-width: 1440px) {
-  header > .hd-container {
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 1440px) {
-  header > .hd-container > .menu-box {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 1440px) {
-  header > .hd-container > .side-box > .translate-box {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 1440px) {
-  header > .hd-container > .side-box > .tab-box {
-    display: block;
-  }
 }
 /* header > logo-box --------------------------------------------------------------- */
 header > .hd-container > .hd-logo-box {
-  border: var(--box-border);
   height: 100%;
   width: 19rem;
 }
@@ -106,6 +104,7 @@ header > .hd-container > .hd-logo-box {
 header > .hd-container > .hd-logo-box > a {
   height: 100%;
   width: 19rem;
+  padding: 0 1.8rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -119,14 +118,17 @@ header > .hd-container > .hd-logo-box > a > img {
   transition: all 0.3s ease-in-out;
 }
 
+header > .hd-container > .hd-logo-box > a > .hd-logo-c {
+  display: none;
+}
+
 header > .hd-container > .hd-logo-box > a:hover > img {
-  transform: scale(0.9);
+  transform: scale(1.1);
   transition: all 0.3s ease-in-out;
 }
 /* header > menu-box --------------------------------------------------------------- */
 header > .hd-container > .menu-box {
   height: 100%;
-  border: var(--box-border);
 }
 
 header > .hd-container > .menu-box > ul {
@@ -140,6 +142,8 @@ header > .hd-container > .menu-box > ul > li {
   width: 100%;
   padding: 0 1.8rem;
   white-space: nowrap;
+  position: relative;
+  z-index: 9;
 }
 
 header > .hd-container > .menu-box > ul > li > a {
@@ -150,34 +154,116 @@ header > .hd-container > .menu-box > ul > li > a {
   justify-content: center;
   align-items: center;
   font-size: 2rem;
-  font-weight: 600;
+  font-weight: 700;
   color: var(--main-color-white);
 }
 
 header > .hd-container > .menu-box > ul > li > a::after {
   content: "";
   position: absolute;
-  width: 100%;
-  height: 0.6rem;
-  background-color: var(--main-color-white);
   top: 100%;
   left: 0;
-  transform: translateY(-50%);
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.2s linear;
+  transform: translateY(-120%) scaleX(0);
+  width: 100%;
+  height: 0.4rem;
+  background-color: var(--main-color-white);
+  text-align: center;
+  transition: all 0.2s ease-in-out;
 }
 
 header > .hd-container > .menu-box > ul > li:hover > a::after {
+  transform: translateY(-120%) scaleX(1);
+  transition: all 0.2s ease-in-out;
+}
+
+header > .hd-container > .menu-box > ul > .bg-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(1rem);
+  width: 100%;
+  height: 42rem;
+  z-index: 8;
+}
+
+header > .hd-container > .menu-box > .menu-item-container {
+  position: absolute;
+  width: 164rem;
+  display: flex;
+  justify-content: space-between;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 9;
+  display: none;
+}
+
+header > .hd-container > .menu-box:hover > .menu-item-container {
+  display: flex;
+}
+
+header > .hd-container > .menu-box > .menu-item-container > ul {
+  color: var(--main-color-gray);
+  flex: 1 0 0;
+  padding: 1.2rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  transition: all 0.2s linear;
+  font-size: 1.6rem;
+  font-weight: 400;
+  opacity: 0;
+  visibility: hidden;
+}
+
+header > .hd-container > .menu-box > .menu-item-container > ul.fade {
   opacity: 1;
   visibility: visible;
-  transition: all 0.2s linear;
+}
+
+header > .hd-container > .menu-box > .menu-item-container > ul > .menu-item-initial {
+  color: #000;
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  padding: 1.2rem 0;
+  transition: all 0.1s ease-in-out;
+  cursor: default;
+}
+
+header > .hd-container > .menu-box > .menu-item-container > ul:hover > .menu-item-initial {
+  color: var(--primary-color);
+  transform: scale(1.1);
+  transition: all 0.1s ease-in-out;
+}
+
+header > .hd-container > .menu-box > .menu-item-container > ul > li {
+  width: 100%;
+}
+
+header > .hd-container > .menu-box > .menu-item-container > ul > li > a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding: 1.1rem 0;
+  transition: all 0.1s ease-in-out;
+  border-radius: 0.4rem;
+}
+
+header > .hd-container > .menu-box > .menu-item-container > ul > li:hover > a {
+  background-color: var(--primary-color);
+  color: var(--main-color-white);
+  transition: all 0.1s ease-in-out;
 }
 /* header > side-box --------------------------------------------------------------- */
 header > .hd-container > .side-box {
-  border: var(--box-border);
   height: 100%;
-  width: 10rem;
+  padding: 0 1.8rem;
   display: flex;
   justify-content: center;
   gap: 0.8rem;
@@ -232,11 +318,13 @@ header > .hd-container > .side-box > .translate-box > a > span {
 header > .hd-container > .side-box > .translate-box > a > img {
   width: 1.4rem;
   object-fit: cover;
+  filter: brightness(10);
 }
 
 header > .hd-container > .side-box > .tab-box {
-  height: 100%;
   display: none;
+  width: 100%;
+  height: 100%;
 }
 
 header > .hd-container > .side-box > .tab-box > a {
@@ -250,7 +338,31 @@ header > .hd-container > .side-box > .tab-box > a {
 
 header > .hd-container > .side-box > .tab-box > a > img {
   display: block;
-  width: 100%;
+  width: 2.4rem;
   object-fit: cover;
-  filter: brightness(10);
+}
+/* @media screens --------------------------------------------------------------- */
+@media screen and (max-width: 1480px) {
+  header > .hd-container {
+    justify-content: space-between;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1480px) {
+  header > .hd-container > .menu-box {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1480px) {
+  header > .hd-container > .side-box > .translate-box {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1480px) {
+  header > .hd-container > .side-box > .tab-box {
+    display: block;
+  }
 }
