--- a/style.CSS
+++ b/style.CSS
@@ -190,7 +190,7 @@ header > .hd-container > .menu-box > ul > .bg-container {
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 1);
   backdrop-filter: blur(1rem);
   width: 100%;
   height: 42rem;
@@ -354,7 +354,6 @@ header > .hd-container > .side-box > .language-box > .translate-box-2 {
   transition: all 0.2s ease-in-out;
 }
 
-
 header > .hd-container > .side-box > .language-box > .translate-box-2.drop {
   opacity: 1;
   visibility: visible;
@@ -366,7 +365,6 @@ header > .hd-container > .side-box > .language-box > .translate-box-2 > a {
   background-color: var(--main-color-white);
   border-radius: 0.4rem;
 }
-
 
 header > .hd-container > .side-box > .language-box > .translate-box-2 > a > .languages-wrapper > span.hover {
   color: var(--main-color-white);
@@ -494,7 +492,7 @@ main > .sec-1 > .text-container > .custom-pagination {
 main > .sec-1 > .text-container > .custom-pagination > .progress-bar {
   width: 22.4rem;
   height: 1rem;
-  background-color: rgba(255,255,255,0.2);
+  background-color: rgba(255, 255, 255, 0.2);
   border-radius: 1.4rem;
   overflow: hidden;
 }
@@ -503,11 +501,12 @@ main > .sec-1 > .text-container > .custom-pagination > .progress-bar > .progress
   height: 100%;
   width: 0%;
   border-radius: 1.4rem;
-  background-color: rgba(230, 230, 230, 0.8);
+  background-color: rgba(230, 230, 230, 1);
   transition: width 0.35s ease-in-out;
 }
 
-main > .sec-1 > .text-container > .custom-pagination > .prev-btn, .next-btn {
+main > .sec-1 > .text-container > .custom-pagination > .prev-btn,
+.next-btn {
   pointer-events: auto;
   background: none;
   border: none;
@@ -517,13 +516,15 @@ main > .sec-1 > .text-container > .custom-pagination > .prev-btn, .next-btn {
   overflow: hidden;
 }
 
-main > .sec-1 > .text-container > .custom-pagination > .prev-btn > img, .next-btn > img {
+main > .sec-1 > .text-container > .custom-pagination > .prev-btn > img,
+.next-btn > img {
   width: 1rem;
   height: 1.4rem;
   object-fit: cover;
 }
 
-main > .sec-1 > .text-container > .custom-pagination > .current, .total {
+main > .sec-1 > .text-container > .custom-pagination > .current,
+.total {
   width: 2rem;
 }
 /* main > sec-2 --------------------------------------------------------------- */
@@ -532,6 +533,52 @@ main > .sec-2 {
   min-width: 192rem;
   height: 100%;
   position: relative;
+  cursor: default;
+  z-index: 6;
+}
+
+.sec-2-text-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: auto;
+  width: 100%;
+  height: 40rem;
+  overflow: hidden;
+  text-align: center;
+  z-index: 7;
+}
+
+.sec2-text {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  white-space: nowrap;
+  pointer-events: none;
+  font-size: 6.4rem;
+  color: var(--main-color-white);
+  font-weight: 600;
+  text-align: center;
+  line-height: 1.5;
+  text-shadow: 0.5rem 0.5rem rgba(68, 68, 68, 0.3);
+}
+
+.t4 {
+  display: flex;
+  justify-content: center;
+  padding: 3.8rem 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.7);
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.t4 > img {
+  width: 45rem;
+  object-fit: var(--object-cover);
 }
 
 main > .sec-2 > .bg-container {
@@ -546,19 +593,6 @@ main > .sec-2 > .bg-container > img {
   height: 100%;
   object-fit: var(--object-cover);
   filter: brightness(0.8);
-}
-
-main > .sec-2 > .slogun-wrapper {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 6.4rem;
-  color: var(--main-color-white);
-  font-weight: 600;
-  text-align: center;
-  line-height: 1.5;
-  text-shadow: 0.5rem 0.5rem rgba(68, 68, 68, 0.3);
 }
 /* footer --------------------------------------------------------------- */
 footer {
