--- a/style.CSS
+++ b/style.CSS
@@ -1266,6 +1266,51 @@ main > .sec-7 > .top-box > span:nth-child(3) {
   line-height: 1.6;
 }
 
+main > .sec-7 > .top-box > span:nth-child(4) {
+  position: relative;
+  width: 19rem;
+  height: 5rem;
+  font-size: 2rem;
+  font-weight: 800;
+  color: var(--main-color-white);
+  background-color: var(--color-black);
+  border-radius: 3.6rem;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+main > .sec-7 > .top-box > span:nth-child(4)::before {
+  content: "VIEW MORE";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  background-color: var(--primary-color);
+  border-radius: 3.6rem;
+  color: var(--main-color-white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  transition: all 0.1s ease-in-out;
+  border: 0.15rem solid var(--prim ary-color);
+}
+
+main > .sec-7 > .top-box > span:nth-child(4):hover::before {
+  transform: scaleX(1);
+  transition: all 0.1s ease-in-out;
+}
+
+main > .sec-7 > .top-box > span:nth-child(4) > a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 main > .sec-7 > .marquee-wrapper {
   display: flex;
   flex-wrap: nowrap;
