--- a/style.CSS
+++ b/style.CSS
@@ -1048,7 +1048,7 @@ main > .sec-5 > .text-container > .bottom-box > .value-wrap > .right-box:hover >
 main > .sec-6 {
   width: 100dvw;
   min-width: 192rem;
-  height: 108dvh;
+  height: 118dvh;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -1167,25 +1167,30 @@ main > .sec-6 > .top-box > .search-box {
   padding: 0 1.2rem;
 }
 
-main > .sec-6 > .bottom-box {
+.goods-slider {
   width: 100%;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   color: var(--main-color-gray);
   padding: var(--margin-grid-system);
+  overflow: visible;
 }
 
-main > .sec-6 > .bottom-box > .goods-box {
+.goods-slider .goods-box {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  text-align: center;
+  padding: 4.8rem;
   gap: 1.2rem;
+  border-left: 0.1rem solid rgba(131, 131, 131, 0.5);
 }
 
-main > .sec-6 > .bottom-box > .goods-box > a {
+.goods-slider .goods-box > a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1193,31 +1198,31 @@ main > .sec-6 > .bottom-box > .goods-box > a {
   overflow: hidden;
 }
 
-main > .sec-6 > .bottom-box > .goods-box > a > img {
+.goods-slider .goods-box > a > img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: var(--object-cover);
   transition: all 0.2s linear;
 }
 
-main > .sec-6 > .bottom-box > .goods-box > a:hover > img {
+.goods-slider .goods-box > a:hover > img {
   transform: scale(1.1);
   transition: all 0.2s linear;
 }
 
-main > .sec-6 > .bottom-box > .goods-box > span:nth-child(1) {
+.goods-slider .goods-box > span:nth-child(1) {
   font-weight: 700;
   font-size: 2.2rem;
   color: var(--primary-color);
 }
 
-main > .sec-6 > .bottom-box > .goods-box > span:nth-child(2) {
+.goods-slider .goods-box > span:nth-child(2) {
   font-size: 3.4rem;
   font-weight: 700;
   color: var(--color-black);
 }
 
-main > .sec-6 > .bottom-box > .goods-box > span:nth-child(4) {
+.goods-slider .goods-box > span:nth-child(4) {
   font-size: 1.6rem;
   font-weight: 500;
   color: var(--main-color-gray);
