--- a/style.CSS
+++ b/style.CSS
@@ -133,7 +133,7 @@ header {
   align-items: center;
   background-color: rgba(0, 117, 197, 0.2);
   z-index: 100;
-  backdrop-filter: blur(1rem);
+  backdrop-filter: blur(10px);
 }
 
 header.hide {
@@ -268,13 +268,21 @@ header > .hd-container > .menu-box > ul > li:hover > a::after {
   transition: all 0.2s ease-in-out;
 }
 
-header > .hd-container > .menu-box > ul > .bg-container {
+header > .hd-container > .menu-box > ul > .bg-container-wrapper {
   display: none;
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: rgba(255, 255, 255, 1);
-  backdrop-filter: blur(1rem);
+  height: 42rem;
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(10px);
+}
+
+header > .hd-container > .menu-box > ul > .bg-container-wrapper > .bg-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
   width: 100%;
   height: 42rem;
   z-index: 8;
@@ -467,6 +475,10 @@ header > .hd-container > .side-box > .tab-box > a > img {
   object-fit: cover;
   filter: brightness(10);
 }
+
+header.on-sec-w > .hd-container > .side-box > .tab-box > a > img {
+  filter: brightness(0);
+}
 /* main --------------------------------------------------------------- */
 main {
   width: 100%;
@@ -482,6 +494,7 @@ main > .sec-1 {
   width: 100%;
   height: 100%;
   position: relative;
+  min-height: 100dvh;
 }
 
 main > .sec-1 > .swiper {
@@ -501,6 +514,7 @@ main > .sec-1 > .swiper > .swiper-wrapper > .swiper-slide > img {
   height: 100%;
   object-fit: var(--object-cover);
   filter: brightness(0.8);
+  min-height: 100dvh;
 }
 
 main > .sec-1 > .text-container {
@@ -523,7 +537,7 @@ main > .sec-1 > .text-container {
 
 main > .sec-1 > .text-container > h1 {
   color: var(--main-color-white);
-  font-size: clamp(2.8rem, 4.5vw, 6.4rem);
+  font-size: clamp(2.8rem, 4.5vw, 64px);
   font-weight: 600;
   cursor: default;
   text-shadow: 0.4rem 0.4rem rgba(68, 68, 68, 0.2);
@@ -543,24 +557,24 @@ main > .sec-1 > .text-container > .text-en > img {
 
 main > .sec-1 > .text-container > .text-en > span {
   color: var(--main-color-white);
-  font-size: clamp(2.2rem, 2.5vw, 3.2rem);
+  font-size: clamp(2.2rem, 2.5vw, 32px);
   font-weight: 600;
   cursor: default;
 }
 
 main > .sec-1 > .text-container > .custom-pagination {
   display: flex;
-  align-items: center; 
+  align-items: center;
   text-align: center;
   gap: 1.2rem;
   color: var(--main-color-white);
-  font-size: clamp(1.6rem, 2vw, 2.2rem);
+  font-size: clamp(1.6rem, 2vw, 22px);
   font-weight: 500;
 }
 
 main > .sec-1 > .text-container > .custom-pagination > .progress-bar {
-  width: clamp(18rem, 12.5vw, 22.4rem);
-  height: clamp(0.6rem, 0.75vw, 1rem);
+  width: clamp(18rem, 12.5vw, 224px);
+  height: clamp(0.6rem, 0.75vw, 10px);
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 1.4rem;
   overflow: hidden;
@@ -603,6 +617,7 @@ main > .sec-1 > .text-container > .custom-pagination > .current,
 .sec-2 {
   width: 100%;
   height: 100%;
+  min-height: 100dvh;
   position: relative;
   cursor: default;
   z-index: 6;
@@ -630,7 +645,7 @@ main > .sec-1 > .text-container > .custom-pagination > .current,
   opacity: 0;
   white-space: nowrap;
   pointer-events: none;
-  font-size: clamp(4.8rem, 4.5vw, 6.4rem);
+  font-size: clamp(4.8rem, 4.5vw, 64px);
   color: var(--main-color-white);
   font-weight: 700;
   text-align: center;
@@ -653,7 +668,7 @@ main > .sec-1 > .text-container > .custom-pagination > .current,
 
 .sec-2 .bg-container {
   width: 100%;
-  height: 100%;
+  height: 100dvh;
   overflow: hidden;
   box-sizing: border-box;
 }
@@ -667,6 +682,7 @@ main > .sec-1 > .text-container > .custom-pagination > .current,
 main > .sec-3 {
   width: 100%;
   height: 100%;
+  min-height: 100dvh;
   padding: 6rem 0;
   cursor: default;
   display: flex;
@@ -686,17 +702,17 @@ main > .sec-3 > .left-box {
 }
 
 main > .sec-3 > .left-box > span:nth-child(1) {
-  font-size: clamp(2.2rem, 1.5vw, 2.8rem);
+  font-size: clamp(2.2rem, 1.5vw, 28px);
   font-weight: 600;
 }
 
 main > .sec-3 > .left-box > h2 {
-  font-size: clamp(5.4rem, 4.5vw, 7.2rem);
+  font-size: clamp(5.4rem, 4.5vw, 72px);
   font-weight: 600;
 }
 
 main > .sec-3 > .left-box > span:nth-child(3) {
-  font-size: clamp(1.2rem, 1vw, 1.6rem);
+  font-size: clamp(1.2rem, 1vw, 16px);
   font-weight: 500;
   line-height: 1.6;
 }
@@ -706,7 +722,7 @@ main > .sec-3 > .left-box > span:nth-child(4) {
   margin-top: 4.8rem;
   width: 19rem;
   height: 5rem;
-  font-size: clamp(1.6rem, 1vw, 2rem);
+  font-size: clamp(1.6rem, 1vw, 20px);
   font-weight: 800;
   color: var(--main-color-gray);
   background-color: var(--main-color-white);
@@ -763,8 +779,8 @@ main > .sec-3 > .right-box {
 }
 
 main > .sec-3 > .right-box > .produce-box {
-  width: 48rem;
-  height: 40rem;
+  width: clamp(calc(480px / 3.25), 30vw, 48rem);
+  height: clamp(calc(400px / 2.75), 25vw, 40rem);
   border-radius: 2.4rem;
   margin: 2.4rem;
   background-color: rgba(255, 255, 255, 0.1);
@@ -794,24 +810,37 @@ main > .sec-3 > .right-box > .produce-box:hover > div {
   transition: all 0.3s linear;
 }
 
+.sec-3 > .right-box > .produce-box > .icon-container {
+  width: clamp(calc(56px / 2.75), 3.5vw, 5.6rem);
+  height: clamp(calc(56px / 2.75), 3.5vw, 5.6rem);
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.sec-3 > .right-box > .produce-box > .icon-container > img {
+  width: 100%;
+  object-fit: var(--object-cover);
+}
+
 .sec-3 > .right-box > .produce-box > .titles {
   font-weight: 600;
-  font-size: clamp(2rem, 1.5vw, 2.4rem);
+  font-size: clamp(2rem, 1.5vw, 24px);
 }
 
 .sec-3 > .right-box > .produce-box > .number {
   font-weight: 600;
-  font-size: clamp(3.6rem, 4.5vw, 4.8rem);
+  font-size: clamp(3.6rem, 3vw, 48px);
 }
 
 .sec-3 > .right-box > .produce-box > .unit {
   font-weight: 500;
-  font-size: clamp(1.4rem, 4.5vw, 1.8rem);
+  font-size: clamp(1.6rem, 1.25vw, 20px);
 }
 /* main > sec-4 --------------------------------------------------------------- */
 main > .sec-4 {
   width: 100%;
   height: 100%;
+  min-height: 100dvh;
   padding: 8rem 0;
   position: relative;
   display: flex;
@@ -1058,6 +1087,7 @@ main > .sec-4 > .bottom-box > .circles > .flip-card > .flip-card-back > p {
 main > .sec-5 {
   width: 100%;
   height: 100%;
+  min-height: 100dvh;
   position: relative;
   cursor: default;
   white-space: nowrap;
@@ -1069,11 +1099,13 @@ main > .sec-5 > .bg-container {
   box-sizing: border-box;
   overflow: hidden;
   pointer-events: none;
+  min-height: 100dvh;
 }
 
 main > .sec-5 > .bg-container > img {
   width: 100%;
   height: 100%;
+  min-height: 100dvh;
   object-fit: var(--object-cover);
 }
 
@@ -1083,6 +1115,7 @@ main > .sec-5 > .text-container {
   left: 50%;
   width: 100%;
   height: 100%;
+  min-height: 100dvh;
   padding: 8rem 0;
   transform: translate(-50%, -50%);
   text-align: center;
@@ -1090,7 +1123,8 @@ main > .sec-5 > .text-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 12rem;
 }
 
 main > .sec-5 > .text-container > .top-box {
@@ -1104,17 +1138,17 @@ main > .sec-5 > .text-container > .top-box {
 }
 
 main > .sec-5 > .text-container > .top-box > span:nth-child(1) {
-  font-size: clamp(2rem, 4.5vw, 2.4rem);
+  font-size: clamp(2rem, 1.5vw, 24px);
   font-weight: 600;
 }
 
 main > .sec-5 > .text-container > .top-box > h4 {
-  font-size: clamp(4.8rem, 4.5vw, 6.4rem);
+  font-size: clamp(calc(6.4rem / 1.75), 3.25vw, 64px);
   font-weight: 600;
 }
 
 main > .sec-5 > .text-container > .top-box > span:nth-child(3) {
-  font-size: clamp(1.2rem, 4.5vw, 1.6rem);
+  font-size: clamp(1.2rem, 1vw, 16px);
   font-weight: 500;
   line-height: 1.6;
 }
@@ -1136,31 +1170,46 @@ main > .sec-5 > .text-container > .bottom-box > .value-wrap {
 }
 
 main > .sec-5 > .text-container > .bottom-box > .value-wrap > .left-box {
-  width: 27.5rem;
+  flex: 4 0 0;
+  width: clamp(calc(27.5rem / 2), 25vw, 275px);
   text-align: left;
 }
 
 main > .sec-5 > .text-container > .bottom-box > .value-wrap > .left-box > span:nth-child(1) {
   font-weight: 600;
-  font-size: clamp(2.4rem, 4.5vw, 3.8rem);
+  font-size: clamp(2.4rem, 1.5vw, 38px);
 }
 
 main > .sec-5 > .text-container > .bottom-box > .value-wrap > .left-box > span:nth-child(2) {
   font-weight: 400;
-  font-size: clamp(1.8rem, 4.5vw, 2.4rem);
+  font-size: clamp(1.8rem, 1vw, 24px);
 }
 
 main > .sec-5 > .text-container > .bottom-box > .value-wrap > .center-box {
   font-weight: 400;
-  font-size: clamp(1.4rem, 4.5vw, 2rem);
+  font-size: clamp(1.4rem, 1vw, 20px);
   text-align: left;
-  flex: 1 0 0;
+  flex: 12 0 0;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+main > .sec-5 > .text-container > .bottom-box > .value-wrap > .right-box {
+  display: block;
+}
+
+main > .sec-5 > .text-container > .bottom-box > .value-wrap > .right-box > a {
+  display: block;
+  width: clamp(calc(4.8rem / 2), 2.75vw, 48px);
+  height: clamp(calc(4.8rem / 2), 2.75vw, 48px);
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
 main > .sec-5 > .text-container > .bottom-box > .value-wrap > .right-box > a > img {
+  width: 100%;
+  object-fit: var(--object-cover);
   transition: all 0.3s ease-in-out;
 }
 
@@ -1176,7 +1225,8 @@ main > .sec-6 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 9.6rem;
   padding: 6rem 0 0 0;
   background-color: var(--main-color-white);
   cursor: default;
@@ -1398,7 +1448,8 @@ main > .sec-7 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 9.6rem;
   background-color: var(--main-color-white);
   cursor: default;
 }
@@ -1624,6 +1675,7 @@ main > .banner > .banner-wrapper > a > span:hover {
 main > .sec-8 {
   width: 100%;
   height: 100%;
+  min-height: 100dvh;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -1640,6 +1692,7 @@ main > .sec-8 > .img-container {
 main > .sec-8 > .img-container > img {
   width: 100%;
   height: 100%;
+  min-height: 100dvh;
   object-fit: cover;
 }
 
@@ -1859,7 +1912,7 @@ footer > .ft-bottom-wrapper > .ft-bottom-box > .bottom-leftover > .ft-bottom-mar
   gap: 3.6rem;
 }
 /* @medias wrapper --------------------------------------------------------------- */
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 768px) {
   header {
     display: none;
   }
@@ -1913,6 +1966,73 @@ footer > .ft-bottom-wrapper > .ft-bottom-box > .bottom-leftover > .ft-bottom-mar
 @media screen and (max-width: 1280px) {
   main > .sec-2 {
     display: none;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  main > .sec-3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 7.2rem;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  main > .sec-3 > .left-box {
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  main > .sec-4 > .bottom-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4.8rem;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  main > .sec-4 > .bg-container > img {
+    animation: none;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  main > .sec-4 > .bg-container > img {
+    animation: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  main > .sec-5 > .text-container > .bottom-box {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  main > .sec-8 {
+    position: relative;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  main > .sec-8 > .img-container {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  main > .sec-8 > .text-container {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 /* @keyframes wrapper --------------------------------------------------------------- */
